2007-04-18  Aaron Bockover  <abock@gnome.org>

	This patch adds org.gnome.SettingsDaemon MM Keys support, originally
	done by Jan Arne Petersen as a patch to the MM Keys plugin. Redesigned 
	by myself to leave support for older GNOME in tact while removing the
	overhead of a plugin on new GNOME. Fixes BGO #395433.

	* src/Core/Banshee.Base/Plugins/PluginFactory.cs (AddExcludeMask): Allow
	filtering plugins for exclusion based on their file name

	* src/Core/Banshee.Base/Plugins/PluginCore.cs: Do not load the legacy
	MM Keys plugin if the new GnomeMMKeys is loaded successfully

	* src/Core/Banshee.Base/GnomeMMKeys.cs: A standalone MM Keys component
	that uses the new org.gnome.SettingsDaemon DBus interface available in
	GNOME 2.18+. If this component loads, the legacy plugin will be disabled

	* src/Core/Banshee.Base/Globals.cs: Try to load GnomeMMKeys at startup;
	load DBus background components before plugins in case the plugins need
	to access them

2007-04-17  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.Daap/DaapSource.cs: Crash fix (BGO #406923, 
	Eric Butler)

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Resolve PSP Audio 
	Device Properties crash (BGO #419163, Jason Conti)

	* src/Plugins/Banshee.Plugins.Recommendation/RecommendationUtilities.cs:
	Prevent reco cache from getting corrupt (BGO #381229, Pepijn van de Geer)

	* src/Core/Banshee.Base/Dap/Dap.cs: Fixed NJB syncing (BGO #405289, 
	Mitch Reierson)

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileComboBox.cs:
	Do not forget profile setting (BGO #410498, Lauri Kotilainen)

	* src/Core/Banshee.Base/Gui/SourceView.cs: Ensure sources that are not
	CanActivate really can't be activated (BGO #415138, Scott Peterson)

2007-04-17  Aaron Bockover  <abock@gnome.org>

	* build/gconf-schema-rules: Revert previous commit as it breaks the 
	install if builddir is undefined; also shouldn't be necessary at all as